# minemonics

./: .gitattributes  .gitignore  README.md
Minemonics/src/: .cproject  .project  BaseApplication.cpp  BaseApplication.h  BaseApplication.hpp  CMakeLists.txt  Heightmap.cpp  Heightmap.h  MinemonicsApplication.cpp  MinemonicsApplication.h  OgreProjectSettings.xml  SimulationManager.cpp  SimulationManager.h  SimulationManager.hpp  newproject.sh
Minemonics/src/CMakeModules/: FindMathGL2.cmake  FindShark2.cmake
Minemonics/src/Modules/: FindFFMPEG.cmake  FindFFmpeg.cmake  FindSDL2.cmake  FindShark.cmake  FindShark3.cmake
Minemonics/src/TestingOgre/: .cproject  CMakeLists.txt  TutorialApplication.cpp  TutorialApplication.h
Minemonics/src/configuration/: ApplicationConfiguration.cpp  ApplicationConfiguration.h  ApplicationConfiguration.hpp  CEGUIConfiguration.cpp  CEGUIConfiguration.h  CEGUIConfiguration.hpp  CameraConfiguration.cpp  CameraConfiguration.h  CameraConfiguration.hpp  ControlConfiguration.cpp  ControlConfiguration.h  ControlConfiguration.hpp  CreatureConfiguration.h  Definitions.hpp  EnvironmentConfiguration.cpp  EnvironmentConfiguration.h  EnvironmentConfiguration.hpp  EvaluationConfiguration.cpp  EvaluationConfiguration.hpp  EvolutionConfiguration.cpp  EvolutionConfiguration.h  EvolutionConfiguration.hpp  FitnessConfiguration.h  FitnessConfiguration.hpp  GUIConfiguration.cpp  GUIConfiguration.hpp  GeneticsConfiguration.cpp  GeneticsConfiguration.h  GeneticsConfiguration.hpp  LoggerConfiguration.cpp  LoggerConfiguration.hpp  MorphologyConfiguration.cpp  MorphologyConfiguration.h  MorphologyConfiguration.hpp  NeuronalNetworkConfiguration.h  OgreSystemConfigStrings.h  OgreSystemConfigStrings.hpp  PhysicsConfiguration.cpp  PhysicsConfiguration.h  PhysicsConfiguration.hpp  (+7 more)
Minemonics/src/controller/: Evaluation.cpp  Evaluation.hpp  EvaluationController.cpp  EvaluationController.hpp  KeyboardHandler.cpp  KeyboardHandler.h  SaveController.cpp  SaveController.h  SaveController.hpp  StateHandler.cpp  StateHandler.h  StateHandler.hpp
Minemonics/src/controller/camera/: CameraHandler.cpp  CameraHandler.h  CameraHandler.hpp
Minemonics/src/controller/configuration/: ApplicationConfiguration.cpp  ApplicationConfiguration.h  CreatureConfiguration.cpp  CreatureConfiguration.h  EnvironmentConfiguration.cpp  EvolutionConfiguration.cpp  FitnessConfiguration.cpp  FitnessConfiguration.h  GeneticsConfiguration.cpp  GeneticsConfiguration.h  NeuronalNetworkConfiguration.cpp  NeuronalNetworkConfiguration.h  PhysicsConfiguration.cpp  PhysicsConfiguration.h
Minemonics/src/controller/environments/: Environment.cpp  Environment.h  Hills.cpp  Hills.h  Hills.hpp  Plane.cpp  Plane.h  Plane.hpp
Minemonics/src/controller/evolution/: Evolution.cpp  Evolution.h  Evolution.hpp
Minemonics/src/controller/input/: ApplicationKeycode.h  ApplicationKeycode.hpp  ApplicationMousecode.h  ApplicationMousecode.hpp  ApplicationScancode.h  ApplicationScancode.hpp  CEGUIInputHandler.cpp  CEGUIInputHandler.h  CEGUIInputHandler.hpp  InputUtils.hpp  KeyboardHandler.cpp  KeyboardHandler.h  KeyboardStateInputHandler.cpp  KeyboardStateInputHandler.hpp  MouseHandler.cpp  MouseHandler.h  OISInputHandler.cpp  OISInputHandler.h  OgreInputHandler.cpp  OgreInputHandler.h  OgreInputHandler.hpp  SDL2InputHandler.cpp  SDL2InputHandler.h  SDL2InputHandler.hpp  SDL2OgreUtils.hpp
Minemonics/src/controller/physics/: DeepSeaController.cpp  DeepSeaController.hpp  GroundController.cpp  GroundController.h  GroundController.hpp  LocomotionController.cpp  LocomotionController.h  MotionController.cpp  MotionController.h  MotionController.hpp  OpenSeaController.cpp  OpenSeaController.h  OpenSeaController.hpp  PhysicsController.cpp  PhysicsController.h  PhysicsController.hpp  RagDoll.cpp  RagDoll.h  RagDoll.hpp
Minemonics/src/controller/ragdoll/: RagDoll.cpp  RagDoll.hpp
Minemonics/src/controller/universe/: Planet.cpp  Planet.hpp  Universe.cpp  Universe.hpp
Minemonics/src/controller/utils/: Randomness.cpp  Randomness.h
Minemonics/src/controller/viewcontroller/: ViewController.cpp  ViewController.hpp
Minemonics/src/model/: Serializable.cpp  Serializable.hpp
Minemonics/src/model/data/: DataSink.cpp  DataSink.hpp  MathGLDataset.cpp  MathGLDataset.hpp
Minemonics/src/model/environments/: EnvironmentPhysics.cpp  EnvironmentPhysics.h  EnvironmentPhysics.hpp
Minemonics/src/model/evolution/: EvolutionM.cpp  EvolutionM.h  EvolutionM_test.cpp  EvolutionModel.cpp  EvolutionModel.h  EvolutionModel.hpp  EvolutionModel_test.cpp  Reaper.cpp  Reaper.h  Reaper.hpp
Minemonics/src/model/settings/: ControlSettings.cpp  ControlSettings.h  EnvironmentSettings.cpp  EnvironmentSettings.h  GeneticAlgorithmSettings.cpp  GeneticAlgorithmSettings.h  MorphologySettings.cpp  MorphologySettings.h  PhysicsSettings.cpp  PhysicsSettings.h
Minemonics/src/model/universe/: CollisionHandler.hpp  Epoch.cpp  Epoch.hpp  Epoch_test.cpp  EvaluationModel.cpp  EvaluationModel.hpp  EvaluationModel_test.cpp  PlanetModel.cpp  PlanetModel.hpp  PlanetModel_test.cpp  UniverseModel.cpp  UniverseModel.hpp  UniverseModel_test.cpp
Minemonics/src/prototype/BulletOgre/: .cproject  .project  TutorialApplication.cpp
Minemonics/src/prototype/TestingOgre/: .cproject  .project
Minemonics/src/test/: TestGenome.cpp  TestGenome.h  TestPopulation.cpp  TestPopulation.h  TestRandomnessDouble.cpp  TestRandomnessDouble.h  TestRandomnessInt.cpp  TestRandomnessInt.h  TestRunner.cpp  TestSettings.h
Minemonics/src/test/settings/: testMorphologySettings.cpp
Minemonics/src/utils/: Debugger.cpp  Debugger.hpp  MathUtils.cpp  MathUtils.hpp  MathUtils_test.cpp  NameGenerator.cpp  NameGenerator.h  NameGenerator.hpp  NameGenerator_test.cpp  NumericUtils.cpp  NumericUtils.hpp  NumericUtils_test.cpp  Randomness.cpp  Randomness.h  Randomness.hpp  Randomness_test.cpp  StringFormatter.cpp  StringFormatter.hpp  TimerManager.hpp
Minemonics/src/utils/bullet/: BulletUtils.hpp
Minemonics/src/utils/logging/: Logger.cpp  Logger.h  Logger.hpp
Minemonics/src/view/: softbody_joint.cpp
(+1576 files in other folders)
